web.config updated

--- a/CogsExplorer-LuisQnA-Bot/Web.config
+++ b/CogsExplorer-LuisQnA-Bot/Web.config
@@ -13,11 +13,11 @@
     <add key="BotId" value="YourBotId" />
     <add key="MicrosoftAppId" value="" />
     <add key="MicrosoftAppPassword" value="" />
-    <add key="QnAKnowledgebaseId" value="69933ec2-62af-4cfb-82c5-63aedb32c6f1"/>
-    <add key="QnASubscriptionKey" value="a790b0f9c28b4430871d79221cb01051"/>
-    <add key="LuisAppId" value="65825f0b-91e0-4d34-9362-1aee8e947db7"/>
-    <add key="LuisAPIKey" value="88462fb21de64a89bdb52295061ae1e0"/>
-    <add key="LuisAPIHostName" value="westus.api.cognitive.microsoft.com"/>
+    <add key="QnAKnowledgebaseId" value="enter your qna kb id"/>
+    <add key="QnASubscriptionKey" value="enter your qna subscription key"/>
+    <add key="LuisAppId" value="enter your luis app id"/>
+    <add key="LuisAPIKey" value="enter your luis api key"/>
+    <add key="LuisAPIHostName" value="ener your luis api host name"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
